# sports_api_client

./: README.md  foot_scrapper.py  get-Barcelona.sh  get-Manchester City.sh  get-Real Madrid.sh  get-all.sh  pyproject.toml
